--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,5 @@ spring:
       ddl-auto: create-drop
     properties:
       hibernate:
-        show_sql: true
-        use_sql_comments: true
+        show_sql: false  # Enable this if you'd like to see all sql in the logs
         format_sql: true
