--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
         <!-- in memory database for the sake of brevity in implementation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
