--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,13 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>Url-Dedupe</name>
     <description>Url Dedupe service</description>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.0.RELEASE</version>
     </parent>
+
     <dependencies>
         <!-- basic tools -->
         <dependency>
@@ -61,6 +63,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -69,14 +72,9 @@
                 <version>2.19.1</version>
                 <dependencies>
                     <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.1.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.3.2</version>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>3.0.0-M4</version>
                     </dependency>
                 </dependencies>
             </plugin>
